--- a/src/Evaluacion/Embedding_projector/projector_config.json
+++ b/src/Evaluacion/Embedding_projector/projector_config.json
@@ -1,9 +1,9 @@
 {
     "embeddings": [
       {
-        "tensorName": "My tensor",
+        "tensorName": "Caption/Images Embedding Space",
         "tensorShape": [
-          16384
+          16384,200
         ],
         "tensorPath": "https://raw.githubusercontent.com/nadaol/Fcefyn-Pps-Machine-Learning/master/src/Evaluacion/Embedding_projector/Tsv_files/Captions_tensor.tsv?token=ALWUAXVTIFCV3O32Q4KUSJK75JV7U",
         "metadataPath": "https://raw.githubusercontent.com/nadaol/Fcefyn-Pps-Machine-Learning/master/src/Evaluacion/Embedding_projector/Tsv_files/Captions_metadata.tsv?token=ALWUAXWNKSHYNA3JXQBFMOK75JV5K"
